Step 0 for content edit

--- a/Changes
+++ b/Changes
@@ -1,2 +1,19 @@
-Adap Links 
-Adap Banner heigth
+Todo
+
+* html language
+* title 
+* content keyword
+* Favicon
+* Logo i need costumer input
+* Navbar custom (4x max 5)
+* Edit links 
+
+
+* RGPD Lows
+* Test death links
+* Breaking news Bar
+* googlemap Custom
+
+
+Adap Links x
+Adap Banner heigth x
