--- a/Changes
+++ b/Changes
@@ -26,3 +26,19 @@ https://praxis-lanczik.de/untersuchungen/
 
 
 Google Indexierung
+
+
+Todo
+
+email create
+
+Externe links
+
+
+#444444;
+#1977cc;
+#3291e6;
+
+
+#3fbbc0
+
