check slide postition

--- a/Changes
+++ b/Changes
@@ -23,6 +23,7 @@ Ref
 https://www.mz-merols.be/
 https://dgkn.de/fuer-experten/fmrt
 https://praxis-lanczik.de/untersuchungen/
+https://www.praxis-am-ponttor.de/
 
 
 Google Indexierung
@@ -41,4 +42,9 @@ Externe links
 
 
 #3fbbc0
+
+
+
+Centre l image 
+
 
