adjusts page structure and fill inner page

--- a/Changes
+++ b/Changes
@@ -32,8 +32,9 @@ Google Indexierung
 Todo
 
 email create
-
 Externe links
+Team bild qaulity
+Pirar bild quality
 
 
 #444444;
@@ -48,3 +49,5 @@ Externe links
 Centre l image 
 
 
+
+'Ubuntu', sans-serif
