some changes after reviews

--- a/ToDo
+++ b/ToDo
@@ -1,8 +1,8 @@
 Computer:
 - dans l'ensemble très bien
-- L'email en haut devrait être 'cliquable’ (d’accord)
-- Je mettrais le bouton de prise de rdv plus au milieu et plus grand (pour moi c’est bien comme ca)
-- photos tops
+- L'email en haut devrait être 'cliquable’ (d’accord)     (X)
+- Je mettrais le bouton de prise de rdv plus au milieu et plus grand (pour moi c’est bien comme ca) (x)
+- photos tops (x)
 - Info Corona... bizarre de le laisser là vu que rien à voir... si (i) tu
 veux utiliser ce canal pour avoir les gens s'inscrire via Doctolib faut que
 ce soit plus claire et que tu saches cliquer sur le lien (ii) si c'est pour
@@ -43,8 +43,7 @@ termin (qui ne se clique pas d'ailleurs) en haut pour passer à la version fr (d
 
 
 
-- je rajouterais « schreiben Sie uns » à coté de rufen-Sie uns an, avec des liens cliquables
-
+- je rajouterais « schreiben Sie uns » à coté de rufen-Sie uns an, avec des liens cliquables (x)
 
 
 
@@ -68,15 +67,15 @@ Quelques remarques,
 
 - a mon avis les photos 3, 4 , 7 et 8 sont un peu rassurantes
 
-- dans le menu, quand on sélectionne la langue, cela saute a kontakt
+- dans le menu, quand on sélectionne la langue, cela saute a kontakt  (X)
 
 - les filles n’ont pas de titre ni de fonction, on ne sait pas ce qu’elles font (est-ce café ou des piqures?)
 
-- pour le kontakt, on ne peut pas cliquer sur l’email et sauter dans son application mail
+- pour le kontakt, on ne peut pas cliquer sur l’email et sauter dans son application mail (x)
 
-- par contre on peut sélectionner l’adresse, c’est parfait pour les robots qui vont vous spammer
+- par contre on peut sélectionner l’adresse, c’est parfait pour les robots qui vont vous spammer (X)
 
-- de la même façon, quand on clique sur le tel, rien ne se passe; on pouvait espérer sauter vers skype ou une autre appli de tel internet
+- de la même façon, quand on clique sur le tel, rien ne se passe; on pouvait espérer sauter vers skype ou une autre appli de tel internet (x)
 
 - il manque les informations pratiques
 
