add testfile and use huge pics for slides

--- a/ToDo
+++ b/ToDo
@@ -106,14 +106,16 @@ Telefonnummer : +32 87 557713 (nicht +32 8755 7713)    (X)
 
 Ansonsten finde ich es echt gut.
 
-Informationenfeld für Corona ist vorhanden, wenn auch noch Test von Dezember
+Informationenfeld für Corona ist vorhanden, wenn auch noch Test von Dezember  (x)
 Über uns mit Tätigkeiten finde ich schon sehr detailliert. Aber trotzdem gut.
 Fotos sind drin: die Leute lieben Bilder. Und nicht zuviel Text
 Sprechzeiten sind drin, und Adressen, das ist das absolut wichtigste
-Im Impressum muss auch drin (falls Sie habne: MwSt Nummer, Handelsregisternummer)
+Im Impressum muss auch drin (falls Sie habne: MwSt Nummer, Handelsregisternummer) 
 Dsgvo: schauen Sie mal hier, da kann man sich den Text anfertigen lassen:  Datenschutzerklärung Muster DSGVO-konform kostenlos für Ihre Webseite (mein-datenschutzbeauftragter.de)
  
 
 Bei der Mobilen Variante ist soweit alles top ausser die Kopfbilder sind zu groß
 
- 
+
+
+https://www.codegrepper.com/code-examples/whatever/bootstrap+carousel+background+image 
