--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,31 @@
+Thanks for downloading this template!
+
+Template Name: Medicio
+Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
+Author: BootstrapMade.com
+License: https://bootstrapmade.com/license/
+
+
+Color code
+
+
+Grün 3fbbc0
+Blau
+
+
+Doctor pic < 30kb
+Slide pci < 160 kb
+
+apple touch < 2kb
+favicon < 500b
+logo <
+
+
+
+Page traduction
+
+
+
 Computer:
 - dans l'ensemble très bien
 - L'email en haut devrait être 'cliquable’ (d’accord)     (X)
