--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,11 @@
+() Top Rendezvous link
+() Banner on Mobile
+() Calendar link herr Soundjock
+() Happy Patient picture
+
+
+
+
 Thanks for downloading this template!
 
 Template Name: Medicio
